Initial Shopify theme commit

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    {{ content_for_header }}
+    <link rel="stylesheet" href="{{ 'theme.css' | asset_url }}">
     <title>Shopify Theme</title>
   </head>
   <body>
